--- a/source/index.html
+++ b/source/index.html
@@ -247,6 +247,50 @@
           </p>
         </div>
       </article>
+      <article class="gallery-item">
+        <h4 class="gallery-item__name">Portfolio</h4>
+        <input class="gallery-item__check" type="checkbox" id="Portfolio"  tabindex="-1">
+        <div class="gallery-item__wrapper">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/portfolio-desktop@1x.jpg 1x, img/portfolio-desktop@2x.jpg 2x">
+            <img src="img/portfolio@1x.jpg" srcset="img/portfolio@2x.jpg 2x" alt="Portfolio">
+          </picture>
+        </div>
+        <div class="gallery-item__bottom">
+          <a class="btn  btn--link">Текущий проект</a>
+          <label class="btn  btn--label  gallery-item__btn" for="Portfolio" tabindex="0">О проекте</label>
+        </div>
+        <div class="gallery-item__info">
+          <ul class="gallery-item__hashtag-list">
+            <li class="gallery-item__hashtag-item">Дизайн</li>
+            <li class="gallery-item__hashtag-item">Adaptive</li>
+            <li class="gallery-item__hashtag-item">Retina</li>
+            <li class="gallery-item__hashtag-item">Кадрирование изображений</li>
+            <li class="gallery-item__hashtag-item">SASS</li>
+            <li class="gallery-item__hashtag-item">SVG</li>
+            <li class="gallery-item__hashtag-item">Gulp</li>
+            <li class="gallery-item__hashtag-item">БЭМ</li>
+            <li class="gallery-item__hashtag-item">Progressive Enhancement</li>
+            <li class="gallery-item__hashtag-item">Оптимизация</li>
+            <li class="gallery-item__hashtag-item">Валидный код</li>
+          </ul>
+          <p class="gallery-item__purpose">
+            <b class="gallery-item__subtitle">Задача:</b>
+            Разработать дизайн и сверстать адаптивно страницу для разрешений 320px, 660px, 1200px. В ходе работы учитывать, что JS может быть отключен
+          </p>
+          <p class="gallery-item__description">
+            <b class="gallery-item__subtitle">Описание:</b>
+            Первый опыт в разработке дизайна интерфейса.
+            В процессе разработки использовались подход "Progressive Enhancement" и "Mobile First",
+            также использовалась БЭМ-методология.
+            Сделана раскадровка и ретинизация изображений с целью ускорения загрузки страницы, чтобы
+            качество изображений было одинакого высоким как на ретиновых, так и на обычных экранах.
+            Произведена базовая сборка и оптимизация проекта с помощью Gulp (оптимизация графики,
+            SVG-спрайты, сборка CSS из SASS, минификация JS и собранного CSS, автоприфексование
+            свойств и группировка media-выражений).
+          </p>
+        </div>
+      </article>
     </section>
     <section class="gallery__group  gallery__group--3">
       <h3 class="visually-hidden">SPA</h3>
