--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <svg x="0px" y="0px" viewBox="0 0 106 112">
       <g>
         <path fill="#currentColor" d="M70.201,58.294h-10.01v36.672H45.025V58.294h-7.213V45.406h7.213v-8.34
-              c0-5.964,2.833-15.303,15.301-15.303L71.56,21.81v12.51h-8.151c-1.337,0-3.217,0.668-3.217,3.513v7.585h11.334L70.201,58.294z"></path>
+              c0-5.964,2.833-15.303,15.301-15.303L71.56,21.81v12.51h-8.151c-1.337,0-3.217,0.668-3.217,3.513v7.585h11.334L70.201,58.294z"/>
       </g>
     </svg>
   </symbol>
@@ -41,7 +41,7 @@
         c0,6.497,4.624,11.916,10.757,13.147c-1.124,0.308-2.311,0.471-3.532,0.471c-0.866,0-1.705-0.083-2.523-0.239
         c1.706,5.326,6.657,9.203,12.526,9.312c-4.59,3.597-10.371,5.74-16.655,5.74c-1.08,0-2.15-0.063-3.197-0.188
         c5.931,3.806,12.981,6.025,20.553,6.025c24.664,0,38.152-20.432,38.152-38.153c0-0.581-0.013-1.16-0.039-1.734
-        C86.391,45.366,88.664,43.005,90.461,40.316L90.461,40.316z"></path>
+        C86.391,45.366,88.664,43.005,90.461,40.316L90.461,40.316z"/>
       </g>
     </svg>
   </symbol>
@@ -50,7 +50,7 @@
       <path d="M400 139c144 0 260 116 260 260 0 115-75 213-178 247-9 3-17-2-17-13v-71c0-35-18-48-18-48 57-6 119-28
           119-128 0-44-27-70-27-70s14-29-2-69c0 0-22-7-72 27-42-12-88-12-130 0-50-34-72-27-72-27-16 40-2 69-2 69s-27 26-27
           70c0 100 62 122 119 128 0 0-14 10-17 35-15 7-53 18-76-22 0 0-13-25-39-27 0 0-26 0-2 16 0 0 17 8 29 38 0 0 16 51
-          88 35v44c0 11-9 16-18 13-103-34-178-132-178-247 0-144 116-260 260-260z"></path>
+          88 35v44c0 11-9 16-18 13-103-34-178-132-178-247 0-144 116-260 260-260z"/>
     </svg>
   </symbol>
 </svg>
@@ -113,7 +113,7 @@
   </section>
   <section class="gallery">
     <h2 class="gallery__title" id="works">Работы</h2>
-    <input class="gallery__tab-radio  gallery__tab-radio-1" type="radio" name="gallery__tab" id="fixed-grid" tabindex="-1" checked="">
+    <input class="gallery__tab-radio  gallery__tab-radio-1" type="radio" name="gallery__tab" id="fixed-grid" tabindex="-1" checked>
     <input class="gallery__tab-radio  gallery__tab-radio-2" type="radio" name="gallery__tab" id="adaptive-grid" tabindex="-1">
     <input class="gallery__tab-radio  gallery__tab-radio-3" type="radio" name="gallery__tab" id="javascript" tabindex="-1">
     <div class="gallery__control">
@@ -125,10 +125,10 @@
       <h3 class="visually-hidden">Десктопные сайты</h3>
       <article class="gallery-item">
         <h4 class="gallery-item__name">Technomart</h4>
-        <input class="gallery-item__check" type="checkbox" id="technomart" tabindex="-1">
+        <input class="gallery-item__check" type="checkbox" id="technomart"  tabindex="-1">
         <div class="gallery-item__wrapper">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/technomart-desktop@1x.jpg 1x, img/technomart-desktop@2x.jpg 2x">
+            <source  media="(min-width: 1200px)" srcset="img/technomart-desktop@1x.jpg 1x, img/technomart-desktop@2x.jpg 2x">
             <img src="img/technomart@1x.jpg" srcset="img/technomart@2x.jpg 2x" alt="Technomart">
           </picture>
         </div>
@@ -160,7 +160,7 @@
       </article>
       <article class="gallery-item">
         <h4 class="gallery-item__name">Sedona</h4>
-        <input class="gallery-item__check" type="checkbox" id="sedona" tabindex="-1">
+        <input class="gallery-item__check" type="checkbox" id="sedona"  tabindex="-1">
         <div class="gallery-item__wrapper">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/sedona-desktop@1x.jpg 1x, img/sedona-desktop@2x.jpg 2x">
@@ -199,7 +199,7 @@
       <h3 class="visually-hidden">Адаптивные сайты</h3>
       <article class="gallery-item">
         <h4 class="gallery-item__name">Pink</h4>
-        <input class="gallery-item__check" type="checkbox" id="pink" tabindex="-1">
+        <input class="gallery-item__check" type="checkbox" id="pink"  tabindex="-1">
         <div class="gallery-item__wrapper">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/pink-desktop@1x.jpg 1x, img/pink-desktop@2x.jpg 2x">
@@ -247,12 +247,56 @@
           </p>
         </div>
       </article>
+      <article class="gallery-item">
+        <h4 class="gallery-item__name">Portfolio</h4>
+        <input class="gallery-item__check" type="checkbox" id="Portfolio"  tabindex="-1">
+        <div class="gallery-item__wrapper">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/portfolio-desktop@1x.jpg 1x, img/portfolio-desktop@2x.jpg 2x">
+            <img src="img/portfolio@1x.jpg" srcset="img/portfolio@2x.jpg 2x" alt="Portfolio">
+          </picture>
+        </div>
+        <div class="gallery-item__bottom">
+          <a class="btn  btn--link">Текущий проект</a>
+          <label class="btn  btn--label  gallery-item__btn" for="Portfolio" tabindex="0">О проекте</label>
+        </div>
+        <div class="gallery-item__info">
+          <ul class="gallery-item__hashtag-list">
+            <li class="gallery-item__hashtag-item">Дизайн</li>
+            <li class="gallery-item__hashtag-item">Adaptive</li>
+            <li class="gallery-item__hashtag-item">Retina</li>
+            <li class="gallery-item__hashtag-item">Кадрирование изображений</li>
+            <li class="gallery-item__hashtag-item">SASS</li>
+            <li class="gallery-item__hashtag-item">SVG</li>
+            <li class="gallery-item__hashtag-item">Gulp</li>
+            <li class="gallery-item__hashtag-item">БЭМ</li>
+            <li class="gallery-item__hashtag-item">Progressive Enhancement</li>
+            <li class="gallery-item__hashtag-item">Оптимизация</li>
+            <li class="gallery-item__hashtag-item">Валидный код</li>
+          </ul>
+          <p class="gallery-item__purpose">
+            <b class="gallery-item__subtitle">Задача:</b>
+            Разработать дизайн и сверстать адаптивно страницу для разрешений 320px, 660px, 1200px. В ходе работы учитывать, что JS может быть отключен
+          </p>
+          <p class="gallery-item__description">
+            <b class="gallery-item__subtitle">Описание:</b>
+            Первый опыт в разработке дизайна интерфейса.
+            В процессе разработки использовались подход "Progressive Enhancement" и "Mobile First",
+            также использовалась БЭМ-методология.
+            Сделана раскадровка и ретинизация изображений с целью ускорения загрузки страницы, чтобы
+            качество изображений было одинакого высоким как на ретиновых, так и на обычных экранах.
+            Произведена базовая сборка и оптимизация проекта с помощью Gulp (оптимизация графики,
+            SVG-спрайты, сборка CSS из SASS, минификация JS и собранного CSS, автоприфексование
+            свойств и группировка media-выражений).
+          </p>
+        </div>
+      </article>
     </section>
     <section class="gallery__group  gallery__group--3">
       <h3 class="visually-hidden">SPA</h3>
       <article class="gallery-item">
         <h4 class="gallery-item__name">Keksobooking</h4>
-        <input class="gallery-item__check" type="checkbox" id="keksobooking" tabindex="-1">
+        <input class="gallery-item__check" type="checkbox" id="keksobooking"  tabindex="-1">
         <div class="gallery-item__wrapper">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/keksobooking-desktop@1x.jpg 1x, img/keksobooking-desktop@2x.jpg 2x">
@@ -302,7 +346,7 @@
       </article>
       <article class="gallery-item">
         <h4 class="gallery-item__name">Pixel Hunter</h4>
-        <input class="gallery-item__check" type="checkbox" id="pixel-hunter" tabindex="-1">
+        <input class="gallery-item__check" type="checkbox" id="pixel-hunter"  tabindex="-1">
         <div class="gallery-item__wrapper">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/pixel-hunter-desktop@1x.png 1x, img/pixel-hunter-desktop@2x.png 2x">
