fix one more trouble

--- a/source/index.html
+++ b/source/index.html
@@ -215,7 +215,7 @@
             <li class="gallery-item__hashtag-item">Adaptive</li>
             <li class="gallery-item__hashtag-item">Retina</li>
             <li class="gallery-item__hashtag-item">Кадрирование изображений</li>
-            <li class="gallery-item__hashtag-item">SASS</li>
+            <li class="gallery-item__hashtag-item">LESS</li>
             <li class="gallery-item__hashtag-item">SVG</li>
             <li class="gallery-item__hashtag-item">Gulp</li>
             <li class="gallery-item__hashtag-item">БЭМ</li>
